--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           if (i !== -1) {
               S.UI.simulate(decodeURI(action).substring(i + 3));
           } else {
-              S.UI.simulate('欢迎光临|朱楼生|私人客栈|lets go!|#countdown 3||Come on！');
+              S.UI.simulate('欢迎光临|私人客栈|#countdown 3||Lets go！');
           }
 
           S.Drawing.loop(function () {
